--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,6 @@
   font-family: agency-gothic-ct-cond-tt,sans-serif;
 }
 
-body, footer { /* Apply this font and background color to whole body and tag of page */
-  background-color: #f1f2f3;
-}
-
 p {
   font-size: 15px;
 }
@@ -49,27 +45,19 @@ p {
   justify-content: center;
 }
 
-/* Main body styling */
-
-.body-wrapper {
-  display: flex;
-  justify-content: center;
-}
-
 /* Main section styling */
 
 .MainSection {
-  width: 65%;
-  display: flex;
+  width: 60%;
+  display: inline-flex;
   flex-direction: column;
-  /* flex-direction: column; */
+  border-right: 25px solid white;
 }
 
 .AsideSection {
-  width: 30%;
-  display: flex;
+  width: 40%;
+  display: inline-flex;
   flex-direction: column;
-  padding: 0px 30px;
 }
 
 /* Main body section styling */
@@ -92,11 +80,31 @@ p {
 }
 
 .content-layout {
+  display: flex;
   margin: 0 auto;
   max-width: 1000px;
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* style 3 column layout */
   gap: 20px;
+}
+
+.content-layout-videos {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* style 2 column layout */
+  gap: 20px;
+}
+
+.content-layout-interviewvideos {
+  display: flex;
+  margin: 0 auto;
+  max-width: 1000px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); /* style 2 column layout */
+  gap: 20px;
+  margin-bottom: 16px;
 }
 
 .card-content {
@@ -113,6 +121,10 @@ p {
   color: black;
 }
 
+.card a:hover {
+  text-decoration: underline;
+}
+
 .gallery img:hover {
   z-index: 1; /* Make images pop out and overlay on mouse hover */
   transform: scale(1.6);
@@ -126,21 +138,39 @@ p {
   height: 80px;
 }
 
+.iframe-container {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56%;
+  display: flex;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Styling Aside Section */
+
 .AsideSection h4 {
   font-weight: normal;
 }
 
-.card a:hover {
-  text-decoration: underline;
-}
-
 /* Styling the Tables */
-.league-table{
-margin: 0px 0% 30px 0%;
+
+.league-table {
+  overflow-x: auto;
+  overflow-y: auto;
+  margin: 0px 0% 30px 0%;
+  display: flex;
 }
 
 .league-table table{
-margin: 0px;
+  margin: 0px;
   padding: 0px;
   border: 1px solid;
   border-color: black;
@@ -150,45 +180,40 @@ th, td {
   padding: 10px;
 }
 
-th{
-background-color: #151d2d;
-color: white;
+th {
+  background-color: #151d2d;
+  color: white;
 }
 
-.heading{
-text-align: center;
-text-decoration: none;
-color: black;
-margin: 30px;
-display: block;
+.heading {
+  text-align: center;
+  text-decoration: none;
+  color: black;
+  margin: 30px;
+  display: block;
 }
 
-.pos{
-text-align: center;
+.pos {
+  text-align: center;
 }
 
-.pos td{
-color: black;
+.pos td {
+  color: black;
 }
 
-table .col{
-border-bottom: 1px solid white;
+table .col {
+  border-bottom: 1px solid white;
 }
 
-.pos:hover{
-font-weight: bold;
+.pos:hover {
+  font-weight: bold;
 }
 
 /* Widget styling */
 
-.widget-styling {
-  width:100%;
-  border:none;
-  transition:all 300ms ease;
-}
-
 /* Styling the Footer */
-.FooterSection, .sponsors {
+
+.FooterSection {
   display: flex;
   color: white;
   background-color: #151d2d;
