Added padding to the Main and Aside sections
Added padding to the Main and Aside sections.

--- a/src/App.css
+++ b/src/App.css
@@ -51,13 +51,14 @@ p {
   width: 60%;
   display: inline-flex;
   flex-direction: column;
-  border-right: 25px solid white;
+  padding: 0px 10px;
 }
 
 .AsideSection {
   width: 40%;
   display: inline-flex;
   flex-direction: column;
+  padding: 0px 10px;
 }
 
 /* Main body section styling */
